# oldenburg-roads-network

./: CMakeLists.txt  README.md  results.md  team-contract.md  team-proposal.md
data/: edges_medium.txt  edges_simple.txt  oneConnectedCompEdges.txt  oneConnectedCompVertices.txt  randomgraphEdges.txt  randomgraphVertices.txt  testAStarEdges.txt  testAStarVertices.txt  testedges1.txt  threeConnectedCompEdges.txt  threeConnectedCompVertices.txt
entry/: main.cpp
includes/: CMakeLists.txt  DisjointSets.cpp  DisjointSets.h  DisjointSets.hpp  Edge.h  Graph.cpp  Graph.hpp  PriorityQueue.cpp  PriorityQueue.h  PriorityQueue.hpp  dataManager.cpp  dataManager.hpp
lib/: AStar.cpp  AStar.hpp  BFS.cpp  BFS.hpp  CMakeLists.txt  Kruskals.cpp  Kruskals.hpp  Node.h
tests/: testAStar.cpp  testBFS.cpp  testKruskals.cpp  testLoadData.cpp
